cmake_minimum_required(VERSION 3.23)
project(CPP_Algorithm_StudyBook)

set(CMAKE_CXX_STANDARD 17)

#add_executable(CPP_Algorithm_StudyBook main.cpp)
#add_executable(CPP_Algorithm_StudyBook ArraysLists.cpp)
#add_executable(CPP_Algorithm_StudyBook ArrayTest.cpp)
#add_executable(CPP_Algorithm_StudyBook Cstart.cpp)
#add_executable(CPP_Algorithm_StudyBook chapter01/Star.cpp )
#add_executable(CPP_Algorithm_StudyBook chapter01/coin.cpp)
#add_executable(CPP_Algorithm_StudyBook chapter01/coin.cpp chapter01/bank.cpp)
#add_executable(CPP_Algorithm_StudyBook chapter01/bank.cpp chapter01/threeNums.cpp)
#add_executable(CPP_Algorithm_StudyBook chapter01/threeNums.cpp chapter01/numberLiteral.cpp)
#add_executable(CPP_Algorithm_StudyBook chapter01/numberLiteral.cpp chapter01/NumberLiteral02.cpp)
#add_executable(CPP_Algorithm_StudyBook chapter01/NumberLiteral02.cpp chapter01/stringLiteral.cpp)
#add_executable(CPP_Algorithm_StudyBook chapter01/stringLiteral.cpp chapter01/EscapeString.cpp)
#add_executable(CPP_Algorithm_StudyBook chapter01/EscapeString.cpp chapter01/Boolean01.cpp)
#add_executable(CPP_Algorithm_StudyBook chapter01/Boolean01.cpp chapter01/circleRoundandArea.cpp)
#add_executable(CPP_Algorithm_StudyBook chapter01/circleRoundandArea.cpp chapter01/stringname.cpp)
#add_executable(CPP_Algorithm_StudyBook chapter01/stringname.cpp chapter01/prec.cpp)
add_executable(CPP_Algorithm_StudyBook chapter01/prec.cpp)
